<package>
  <name>lsd_slam_core</name>
  <version>0.0.1</version>
  <description> Large-Scale Direct Monocular SLAM </description>
  <author>Jakob Engel</author>
  <maintainer email="mylxiaoyi@gmail.com">mylxiaoyi</maintainer>
  <license>see http://vision.in.tum.de/lsdslam </license>
  <url>http://vision.in.tum.de/lsdslam</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
</package> 
