<?xml version="1.0" ?>
<package>
  <name>lsd_slam_viewer</name>
  <description> 3D Viewer for LSD-SLAM.  </description>
  <version>0.0.1</version>
  <author>Jakob Engel</author>
  <maintainer email="mylxiaoyi@gmail.com">mylxiaoyi</maintainer>
  <license>see http://vision.in.tum.de/lsdslam</license>
  <url>http://vision.in.tum.de/lsdslam</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>


